@@ -1,0 +1,3 @@
+nop	Invalid instruction.
+
+npo	Valid instruction.
