@@ -1,0 +1,6 @@
+str dummy0	this won't compile
+
+dsp	dummy0
+lab	main
+jmp	main
+lab	main
