@@ -9,6 +9,10 @@ import (
 	"strings"
 )
 
+func compilerError(msg, str string, line int) {
+	exit(fmt.Sprintf("compiler: %s [%s] at line %d", msg, str, line))
+}
+
 var data [dataSize]string
 
 func parser(f *os.File) (code [maxCodeSize]float64) {
@@ -34,108 +38,111 @@ func parser(f *os.File) (code [maxCodeSize]float64) {
 		}
 		lineNumber += 1
 
-		instructions := strings.Fields(line)
+		ins := strings.Fields(line)
 
-		if len(instructions) == 0 {
+		if len(ins) == 0 {
 			continue
 		}
 
-		switch instructions[0] {
+		switch ins[0] {
 		case "lab":
-			labels[instructions[1]] = count
+			if labels[ins[1]] != 0 {
+				compilerError("label redefinition", ins[1], lineNumber)
+			}
+			labels[ins[1]] = count
 		case "def":
-			labels[instructions[1]] = count
+			labels[ins[1]] = count
 
 		case "cll":
 			code[count] = cll
-			labelsPending[count+1] = instructions[1]
+			labelsPending[count+1] = ins[1]
 			count += 2
 		case "ret":
 			code[count] = ret
 			count += 1
 
 		case "str":
-			data[dataCurr] = strings.Join(instructions[2:len(instructions)], " ")
-			dataMap[instructions[1]] = dataCurr
+			data[dataCurr] = strings.Join(ins[2:len(ins)], " ")
+			dataMap[ins[1]] = dataCurr
 			dataCurr += 1
 		case "dsp":
 			code[count] = dsp
-			code[count+1] = float64(dataMap[instructions[1]])
+			code[count+1] = float64(dataMap[ins[1]])
 			count += 2
 
 		case "jmp":
 			code[count] = jmp
-			labelsPending[count+1] = instructions[1]
+			labelsPending[count+1] = ins[1]
 			count += 2
 		case "jlt":
 			code[count] = jlt
-			labelsPending[count+1] = instructions[1]
+			labelsPending[count+1] = ins[1]
 			count += 2
 		case "jeq":
 			code[count] = jeq
-			labelsPending[count+1] = instructions[1]
+			labelsPending[count+1] = ins[1]
 			count += 2
 		case "jgt":
 			code[count] = jgt
-			labelsPending[count+1] = instructions[1]
+			labelsPending[count+1] = ins[1]
 			count += 2
 
 		case "cmp":
 			code[count] = cmp
-			code[count+1] = getRegister(instructions[1])
-			code[count+2] = getRegister(instructions[2])
+			code[count+1] = getRegister(ins[1])
+			code[count+2] = getRegister(ins[2])
 			count += 3
 		case "cmz":
 			code[count] = cmz
-			code[count+1] = getRegister(instructions[1])
+			code[count+1] = getRegister(ins[1])
 			count += 2
 
 		case "val":
 			code[count] = val
-			code[count+1] = getLiteral(instructions[1])
-			code[count+2] = getRegister(instructions[2])
+			code[count+1] = getLiteral(ins[1])
+			code[count+2] = getRegister(ins[2])
 			count += 3
 		case "cpy":
 			code[count] = cpy
-			code[count+1] = getRegister(instructions[1])
-			code[count+2] = getRegister(instructions[2])
+			code[count+1] = getRegister(ins[1])
+			code[count+2] = getRegister(ins[2])
 			count += 3
 		case "psh":
 			code[count] = psh
-			code[count+1] = getRegister(instructions[1])
+			code[count+1] = getRegister(ins[1])
 			count += 2
 		case "pop":
 			code[count] = pop
-			code[count+1] = getRegister(instructions[1])
+			code[count+1] = getRegister(ins[1])
 			count += 2
 
 		case "add":
 			code[count] = add
-			code[count+1] = getRegister(instructions[1])
-			code[count+2] = getRegister(instructions[2])
+			code[count+1] = getRegister(ins[1])
+			code[count+2] = getRegister(ins[2])
 			count += 3
 		case "sub":
 			code[count] = sub
-			code[count+1] = getRegister(instructions[1])
-			code[count+2] = getRegister(instructions[2])
+			code[count+1] = getRegister(ins[1])
+			code[count+2] = getRegister(ins[2])
 			count += 3
 		case "mul":
 			code[count] = mul
-			code[count+1] = getRegister(instructions[1])
-			code[count+2] = getRegister(instructions[2])
+			code[count+1] = getRegister(ins[1])
+			code[count+2] = getRegister(ins[2])
 			count += 3
 		case "div":
 			code[count] = div
-			code[count+1] = getRegister(instructions[1])
-			code[count+2] = getRegister(instructions[2])
+			code[count+1] = getRegister(ins[1])
+			code[count+2] = getRegister(ins[2])
 			count += 3
 		case "shw":
 			code[count] = shw
-			code[count+1] = getRegister(instructions[1])
+			code[count+1] = getRegister(ins[1])
 			count += 2
 		case "get":
 			code[count] = get
-			code[count+1] = getRegister(instructions[1])
+			code[count+1] = getRegister(ins[1])
 			count += 2
 		case "nop":
 			code[count] = nop
@@ -145,22 +152,22 @@ func parser(f *os.File) (code [maxCodeSize]float64) {
 			count += 1
 		case "flr":
 			code[count] = flr
-			code[count+1] = getRegister(instructions[1])
+			code[count+1] = getRegister(ins[1])
 			count += 2
 		case "cel":
 			code[count] = cel
-			code[count+1] = getRegister(instructions[1])
+			code[count+1] = getRegister(ins[1])
 			count += 2
 		case "inc":
 			code[count] = inc
-			code[count+1] = getRegister(instructions[1])
+			code[count+1] = getRegister(ins[1])
 			count += 2
 		case "dec":
 			code[count] = dec
-			code[count+1] = getRegister(instructions[1])
+			code[count+1] = getRegister(ins[1])
 			count += 2
 		default:
-			exit(fmt.Sprintf("invalid '%s' at line %d", instructions[0], lineNumber))
+			compilerError("invalid instruction", ins[0], lineNumber)
 		}
 	}
 
